fixed some issue related to visibility

--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ body {
 
 .popup-content {
     background-color: rgb(90, 90, 90);  /* Changed from #fefefe to gray */
-    background-color: rgba(90, 90, 90, 0.4);  /* Added transparency to the gray background */
+    background-color: rgba(90, 90, 90, 0.5);  /* Added transparency to the gray background */
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #000000;   
@@ -324,10 +324,10 @@ body {
 }
 .question-container {
     background-color: hsla(0, 0%, 100%, 0.801);
-    border: 2px solid black ;
+    border: 2px solid rgb(102, 102, 102) ;
     color: black;
     margin-bottom: 20px;
-    padding: 10px;
+    padding: 12px;
     border-radius: 5px;
 }
 
@@ -347,7 +347,7 @@ body {
 .options label {
     transform: scale(1);
     transition: all 0.3s ease;
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgba(0, 0, 0, 0.7);
     color: rgb(255, 249, 249);
     padding: 12px;
     border-radius: 8px;
